<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="mx.itesm.csf.ge_scanner.BeaconInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/minorLabelTextView"
            android:labelFor="@+id/minorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/beacon_id_label"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/minorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:ems="24"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="0.5"
            android:onClick="onRadioButtonClicked"
            android:text="@string/left"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="0.5"
            android:onClick="onRadioButtonClicked"
            android:text="@string/right"
            android:textSize="24sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/floorFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/floorLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/floorEditText"
            android:layout_weight="0.5"
            android:text="@string/floors_label"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/floorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:ems="24"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/capacityLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:labelFor="@+id/capacityEditText"
            android:text="@string/capacity_label"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/capacityEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:ems="24"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/costLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:labelFor="@+id/costEditText"
            android:text="@string/cost_label"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/costEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:ems="24"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/typeLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:labelFor="@+id/typeEditText"
            android:text="@string/type_label"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/closestBeaconTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/closest_beacon_label"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/beaconTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/selectClosestBeaconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/closest_beacon_button" />

    <Button
        android:id="@+id/updateZoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/update_zone_button" />

    <Button
        android:id="@+id/resetBeaconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/reset_beacon_button" />
</LinearLayout>
